--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 ﻿# Site settings
-title: LZP Blog
-SEOTitle: 龙泽平的博客 | LZP Blog
+title: V1S Blog
+SEOTitle: 一帆的博客 | LZP Blog
 header-img: img/bg-home1.jpg
-email: longzeping@sina.com
+email: 2523366@qq.com
 description: "Every failure is leading towards success."
-keyword: "LZP, LZP Blog, 龙泽平的博客, longzeping, 龙泽平, Android, Python, C++, C, Ruby, Go, Javascript, Java, 大数据, 机器学习, 人工智能, 量化投资"
-url: "https://longzeping.github.io"          # your host, for absolute URL
+keyword: "V1S, V1S Blog, 一帆的博客, liuyifan, 一帆, Android, Python, C++, C, Ruby, Go, Javascript, Java, 大数据, 机器学习, 人工智能, 量化投资"
+url: "https://v1s007.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/longzeping/longzeping.github.io.git" # you code repository
+github_repo: "https://github.com/v1s007/v1s007.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -19,8 +19,8 @@ sidebar-avatar: /img/about-lzp.jpg      # use absolute URL, seeing it's used in 
 # SNS settings
 RSS: true
 weibo_username:     1401193877
-zhihu_username:     longzeping
-github_username:    longzeping
+zhihu_username:     liuyifan
+github_username:    v1s007
 facebook_username:  zeping.long.5
 jianshu_username:   5f23b2a77d88
 
